Reports updated after having included traceability

--- a/karate-reports/com.test.automation.project.testautomationjavaservicebackend.api.karate.GetCars.html
+++ b/karate-reports/com.test.automation.project.testautomationjavaservicebackend.api.karate.GetCars.html
@@ -45,13 +45,13 @@ posthog.init('phc_M6fKk3dSX9HjglkqPSybauGas45NINb7EgsPGU8N9g1',{
     <div>Scenarios</div>
   </div>         
   <div id="nav-date">
-    <div>2023-10-26 05:15:43 p. m.</div>
+    <div>2023-10-27 05:02:46 p. m.</div>
   </div>        
 </div>
 
         <div class="nav-container">
           <div class="nav-item passed">
-            <a href="#[1:3]"><span>[1:3]</span> <span>el inventario contiene un listado de nueve carros precargados</span></a>
+            <a href="#[1:3]"><span>[1:3]</span> <span>EPCARS001 el inventario contiene un listado de nueve carros precargados</span></a>
           </div>
         </div>
       </div>
@@ -72,12 +72,12 @@ posthog.init('phc_M6fKk3dSX9HjglkqPSybauGas45NINb7EgsPGU8N9g1',{
               </div>
               <div class="scenario-keyword">
                 Scenario: <span>[1:3]</span>
-                <span class="scenario-name">el inventario contiene un listado de nueve carros precargados</span>
+                <span class="scenario-name">EPCARS001 el inventario contiene un listado de nueve carros precargados</span>
                 <span></span>
               </div>
             </div>
             <div class="scenario-time passed">
-              <span>ms:</span>&nbsp;<span>32</span>
+              <span>ms:</span>&nbsp;<span>22</span>
             </div>
           </div>
           
@@ -94,7 +94,7 @@ posthog.init('phc_M6fKk3dSX9HjglkqPSybauGas45NINb7EgsPGU8N9g1',{
         <span>Given</span>&nbsp;<span>url baseUrl + &#39;/api/cars&#39;</span>
       </div>
     </div>
-    <div class="time-cell passed">1</div>
+    <div class="time-cell passed">2</div>
   </div>
 
    
@@ -103,8 +103,8 @@ posthog.init('phc_M6fKk3dSX9HjglkqPSybauGas45NINb7EgsPGU8N9g1',{
 
   
 
-  <div class="preformatted" data-parent="0.4">17:15:43.529 karate.env system property was: null 
-17:15:43.530 karate.env set to &quot;dev&quot; as default. 
+  <div class="preformatted" data-parent="0.4">17:02:46.554 karate.env system property was: null 
+17:02:46.555 karate.env set to &quot;dev&quot; as default. 
 </div>   
 
   
@@ -124,7 +124,7 @@ posthog.init('phc_M6fKk3dSX9HjglkqPSybauGas45NINb7EgsPGU8N9g1',{
         <span>When</span>&nbsp;<span>method get</span>
       </div>
     </div>
-    <div class="time-cell passed">24</div>
+    <div class="time-cell passed">13</div>
   </div>
 
    
